--- a/source/_posts/.obsidian/app.json
+++ b/source/_posts/.obsidian/app.json
@@ -1,6 +1,13 @@
 {
-  "newLinkFormat": "relative",
+  "promptDelete": false,
+  "strictLineBreaks": false,
+  "foldHeading": true,
   "alwaysUpdateLinks": true,
+  "showInlineTitle": false,
+  "readableLineLength": true,
+  "showIndentGuide": true,
+  "showLineNumber": false,
   "useMarkdownLinks": true,
+  "newLinkFormat": "relative",
   "newFileLocation": "current"
 }
