--- a/source/_posts/.obsidian/appearance.json
+++ b/source/_posts/.obsidian/appearance.json
@@ -1,3 +1,14 @@
 {
-  "accentColor": ""
+  "accentColor": "",
+  "cssTheme": "Typora-Vue",
+  "theme": "moonstone",
+  "monospaceFontFamily": "",
+  "baseFontSize": 17,
+  "translucency": false,
+  "enabledCssSnippets": [
+    "test"
+  ],
+  "nativeMenus": false,
+  "interfaceFontFamily": "微软雅黑",
+  "textFontFamily": "微软雅黑"
 }
